Add conditional rendering for experience links in Experience.astro
- Updated the rendering logic for the experience name to conditionally display a link if a URL is provided.
- If no URL is available, the name is displayed as a plain text span.

--- a/src/components/sections/Experience.astro
+++ b/src/components/sections/Experience.astro
@@ -20,9 +20,13 @@ import { work } from "@cv"
                 <header>
                   <div>
                     <h3>
-                      <a href={url} title={`Ver ${name}`} target="_blank">
+                      {url ?
+                       (<a href={url} title={`Ver ${name}`} target="_blank">
                         {name}
-                      </a>
+                      </a>) : (<span title={name}>
+                        {name}
+                      </span>)
+                      }
                     </h3>
                     <h4>{position}</h4>
                   </div>
