Remove time info

--- a/src/components/sections/Education.astro
+++ b/src/components/sections/Education.astro
@@ -21,7 +21,7 @@ import { education } from "@cv"
                   <h3>{institution}</h3>
                 </div>
 
-                <time>{years}</time>
+                {/* <time>{years}</time> */}
               </header>
 
               <footer>
