--- a/src/components/sections/Experience.astro
+++ b/src/components/sections/Experience.astro
@@ -31,7 +31,7 @@ import { work } from "@cv"
                     <h4>{position}</h4>
                   </div>
 
-                  <time>{years}</time>
+                  {/* <time>{years}</time> */}
                 </header>
 
                 <footer>
